--- a/Hrms/src/main/resources/application.properties
+++ b/Hrms/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Hrms
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/Hrms
+spring.datasource.username=postgres
+spring.datasource.password=Wrongway@123
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.propertiesa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
